--- a/notebooks/simple-pilot.ipynb
+++ b/notebooks/simple-pilot.ipynb
@@ -401,19 +401,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 145,
    "id": "d3664c51-5d75-4d68-a74c-d773875048bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nationalities = [\"myanmar\", \"german\", \"israel\", \"japan\", \"taiwan\", \"turkish\", \"pakistan\", \"english\", \"finnish\", \"egypt\", \"syrian\", \"palestine\", \"saudi\", \"russian\", \"russia\", \"syria\", \"california\"]\n",
+    "nationalities = [\"myanmar\", \"german\", \"israel\", \"japan\", \"taiwan\", \"turkish\", \"pakistan\", \"english\", \"finnish\", \"egypt\", \"syrian\", \"palestine\",\n",
+    "                 \"saudi\", \"russian\", \"russia\", \"syria\", \"california\", \"australia\", \"ukraine\", \"chinese\", \"china\", \"arabia\", \"greece\"]\n",
     "protected_groups = [\"migrants\", \"woman\", \"female\", \"refugee\"]\n",
     "religions = [\"jew\", \"jewish\", \"muslim\", \"moslem\", \"islam\", \"christian\", \"christ\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 146,
    "id": "3e2c71c0-d11f-417e-b7fb-aeaee08d9acb",
    "metadata": {},
    "outputs": [
@@ -423,7 +424,7 @@
        "array([[0.30581131, 0.69418869]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 147,
    "id": "fd27d5f0-eeb9-4284-a6b1-16b3836ffa0b",
    "metadata": {},
    "outputs": [
@@ -444,7 +445,7 @@
        "array([[0.56024287, 0.43975713]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "id": "1d46146e-0701-4bfe-a793-05ff11dd19d9",
    "metadata": {},
    "outputs": [
@@ -465,7 +466,7 @@
        "array([[0.46630715, 0.53369285]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "id": "42c7a26c-764e-4276-b0d6-93f1c7fe9cb6",
    "metadata": {},
    "outputs": [
@@ -486,7 +487,7 @@
        "array([[0.21454639, 0.78545361]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "id": "af28b481-5ca5-48d1-821b-e9e9c0fda9c1",
    "metadata": {},
    "outputs": [
@@ -507,7 +508,7 @@
        "array([[0.33445889, 0.66554111]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "id": "cc2b2879-9608-4c70-8915-4e08455aba32",
    "metadata": {},
    "outputs": [
@@ -528,7 +529,7 @@
        "array([[0.32783676, 0.67216324]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "id": "68e55d5a-30b6-4a0e-91f5-17eab3cb68d6",
    "metadata": {},
    "outputs": [
@@ -549,7 +550,7 @@
        "array([[0.32783676, 0.67216324]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "id": "b03cc234-7623-4fc1-8e3c-e8a87835cce2",
    "metadata": {},
    "outputs": [
@@ -570,7 +571,7 @@
        "array([[0.49018913, 0.50981087]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "id": "f7af2f27-1618-4065-81bd-fc7bcd111e41",
    "metadata": {},
    "outputs": [],
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "id": "bfa3fa05-4705-427f-9297-5b79f730b6b3",
    "metadata": {},
    "outputs": [],
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 148,
    "id": "f1bc828a-ed12-45a8-8623-9927d087fcef",
    "metadata": {},
    "outputs": [],
@@ -633,17 +634,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 149,
    "id": "d9f8b250-dbaa-420b-83c3-9dbe6982fc5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "437"
+       "505"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,17 +655,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 150,
    "id": "f86b6888-e3f0-40cb-b49c-24484fb54b6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.05740181268882175"
+       "0.06633390253513727"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,10 +676,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 86,
    "id": "950f875b-7089-4e19-afc6-d820ad1b0a04",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import eli5\n",
+    "from eli5.lime import TextExplainer\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def important_lime_words(model, text: str, target_names: List[str], top_n: int = 10):\n",
+    "    te = TextExplainer(random_state=42)\n",
+    "    te.fit(text, model.predict_proba)\n",
+    "    #te.show_prediction(target_names=target_names, feature_names=te.vec_.get_feature_names_out())\n",
+    "    interpret_sample_dict = {c: w for c, w in zip(te.clf_.coef_[0], te.vec_.get_feature_names_out())}\n",
+    "    top_interpret_sample_dict = sorted(interpret_sample_dict.items(), key=lambda x: -np.abs(x[0]))[:min(len(interpret_sample_dict), 10)]\n",
+    "    return [w for (s, w) in top_interpret_sample_dict]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "57faa157-57ca-4ca0-8b1d-3da0c862a284",
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://t.co/eHKLp12yiP Paci?c Media Centre | articles: AUSTRALIA: RSF protests over new security gag over reporting on...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -689,226 +718,101 @@
     },
     {
      "data": {
-      "text/html": [
-       "\n",
-       "    <style>\n",
-       "    table.eli5-weights tr:hover {\n",
-       "        filter: brightness(85%);\n",
-       "    }\n",
-       "</style>\n",
-       "\n",
-       "\n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "        \n",
-       "\n",
-       "    \n",
-       "\n",
-       "        \n",
-       "\n",
-       "        \n",
-       "    \n",
-       "        \n",
-       "        \n",
-       "    \n",
-       "        <p style=\"margin-bottom: 0.5em; margin-top: 0em\">\n",
-       "            <b>\n",
-       "    \n",
-       "        y=disaster\n",
-       "    \n",
-       "</b>\n",
-       "\n",
-       "    \n",
-       "    (probability <b>0.887</b>, score <b>2.064</b>)\n",
-       "\n",
-       "top features\n",
-       "        </p>\n",
-       "    \n",
-       "    <table class=\"eli5-weights\"\n",
-       "           style=\"border-collapse: collapse; border: none; margin-top: 0em; table-layout: auto; margin-bottom: 2em;\">\n",
-       "        <thead>\n",
-       "        <tr style=\"border: none;\">\n",
-       "            \n",
-       "                <th style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\" title=\"Feature contribution already accounts for the feature value (for linear models, contribution = weight * feature value), and the sum of feature contributions is equal to the score or, for some classifiers, to the probability. Feature values are shown if &quot;show_feature_values&quot; is True.\">\n",
-       "                    Contribution<sup>?</sup>\n",
-       "                </th>\n",
-       "            \n",
-       "            <th style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">Feature</th>\n",
-       "            \n",
-       "        </tr>\n",
-       "        </thead>\n",
-       "        <tbody>\n",
-       "        \n",
-       "            <tr style=\"background-color: hsl(120, 100.00%, 80.00%); border: none;\">\n",
-       "    <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
-       "        +2.065\n",
-       "    </td>\n",
-       "    <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
-       "        Highlighted in text (sum)\n",
-       "    </td>\n",
-       "    \n",
-       "</tr>\n",
-       "        \n",
-       "        \n",
-       "\n",
-       "        \n",
-       "        \n",
-       "            <tr style=\"background-color: hsl(0, 100.00%, 99.94%); border: none;\">\n",
-       "    <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
-       "        -0.001\n",
-       "    </td>\n",
-       "    <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
-       "        &lt;BIAS&gt;\n",
-       "    </td>\n",
-       "    \n",
-       "</tr>\n",
-       "        \n",
-       "\n",
-       "        </tbody>\n",
-       "    </table>\n",
-       "\n",
-       "    \n",
-       "\n",
-       "\n",
-       "\n",
-       "    <p style=\"margin-bottom: 2.5em; margin-top:-0.5em;\">\n",
-       "        <span style=\"background-color: hsl(120, 100.00%, 77.21%); opacity: 0.89\" title=\"0.218\">christian</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(0, 100.00%, 83.23%); opacity: 0.86\" title=\"-0.140\">attacked</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 91.22%); opacity: 0.82\" title=\"0.056\">by</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 69.10%); opacity: 0.94\" title=\"0.336\">muslims</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 87.66%); opacity: 0.84\" title=\"0.091\">at</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(0, 100.00%, 90.56%); opacity: 0.83\" title=\"-0.062\">the</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 80.52%); opacity: 0.87\" title=\"0.174\">temple</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 78.84%); opacity: 0.88\" title=\"0.196\">mount</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 97.47%); opacity: 0.80\" title=\"0.009\">after</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 85.29%); opacity: 0.85\" title=\"0.117\">waving</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 60.00%); opacity: 1.00\" title=\"0.486\">israeli</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 87.54%); opacity: 0.84\" title=\"0.092\">flag</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(0, 100.00%, 92.20%); opacity: 0.82\" title=\"-0.047\">via</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 93.09%); opacity: 0.82\" title=\"0.040\">pamela</span><span style=\"opacity: 0.80\"> </span><span style=\"background-color: hsl(120, 100.00%, 90.92%); opacity: 0.82\" title=\"0.059\">geller</span><span style=\"opacity: 0.80\"> - ... </span><span style=\"background-color: hsl(120, 100.00%, 62.70%); opacity: 0.98\" title=\"0.440\">http</span><span style=\"opacity: 0.80\">://</span><span style=\"background-color: hsl(0, 100.00%, 97.67%); opacity: 0.80\" title=\"-0.008\">t</span><span style=\"opacity: 0.80\">.</span><span style=\"background-color: hsl(0, 100.00%, 95.73%); opacity: 0.81\" title=\"-0.020\">co</span><span style=\"opacity: 0.80\">/</span><span style=\"background-color: hsl(0, 100.00%, 76.66%); opacity: 0.89\" title=\"-0.225\">lhbzhwq4b9</span>\n",
-       "    </p>\n",
-       "\n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "    \n",
-       "\n",
-       "\n",
-       "\n"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "['new',\n",
+       " 'http',\n",
+       " 'media',\n",
+       " 'australia',\n",
+       " 'articles',\n",
+       " 'rsf',\n",
+       " 'security',\n",
+       " 'articles australia',\n",
+       " 'over new',\n",
+       " 'new security']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import eli5\n",
-    "from eli5.lime import TextExplainer\n",
+    "text = nationality_tweets[359]\n",
     "\n",
-    "te = TextExplainer(random_state=42)\n",
-    "te.fit(nationality_tweets[50], clf.predict_proba)\n",
-    "te.show_prediction(target_names=[\"no-disaster\", \"disaster\"], feature_names=te.vec_.get_feature_names_out())"
+    "print(text)\n",
+    "important_lime_words(\n",
+    "    model=clf,\n",
+    "    text=text,\n",
+    "    target_names=[\"no-disaster\", \"disaster\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd393bd7-d050-46a0-9836-f6eb540f7d7c",
+   "metadata": {},
+   "source": [
+    "## does changing the protected attribute change the prediction?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "39acc349-96aa-4137-a879-9d8d667aaaeb",
+   "execution_count": 192,
+   "id": "656798bb-85c0-442b-8910-f73d0c59ae6e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How the West was burned: Thousands of wildfires ablaze in California alone http://t.co/vl5TBR3wbr\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[ 0.00941925,  0.        ,  0.        ,  0.03767112, -0.1404511 ,\n",
-       "         0.        ,  0.05574887,  0.        ,  0.21781028,  0.        ,\n",
-       "         0.01572881, -0.03566231,  0.13898741, -0.04703107,  0.15887962,\n",
-       "        -0.10037402,  0.60335701, -0.06271444,  0.48642276,  0.        ,\n",
-       "        -0.18964945,  0.19584758,  0.        ,  0.28339086,  0.05300822,\n",
-       "         0.03961097,  0.        ,  0.054329  ,  0.        ,  0.27350452,\n",
-       "         0.        ,  0.        , -0.099484  ,  0.        ,  0.        ,\n",
-       "         0.11656123,  0.        ]])"
+       "array([[0.25125012, 0.74874988]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "te.clf_.coef_"
+    "text = nationality_tweets[3]\n",
+    "print(text)\n",
+    "\n",
+    "clf.predict_proba([text])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "97dc9c70-d670-41b5-ac93-c6b0c0ebb131",
+   "execution_count": 189,
+   "id": "5d73277d-e19e-4055-97d1-a481f98ac778",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['after', 'after waving', 'at', 'at the', 'attacked', 'attacked by',\n",
-       "       'by', 'by muslims', 'christian', 'christian attacked', 'co',\n",
-       "       'co lhbzhwq4b9', 'flag', 'flag via', 'geller', 'geller http',\n",
-       "       'http', 'http t', 'israeli', 'israeli flag', 'lhbzhwq4b9', 'mount',\n",
-       "       'mount after', 'muslims', 'muslims at', 'pamela', 'pamela geller',\n",
-       "       't', 't co', 'temple', 'temple mount', 'the', 'the temple', 'via',\n",
-       "       'via pamela', 'waving', 'waving israeli'], dtype=object)"
+       "array([[0.57531384, 0.42468616]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "te.vec_.get_feature_names_out()"
+    "text2 = text.replace(\"Syrian\", \"German\")\n",
+    "\n",
+    "clf.predict_proba([text2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0fd32c-24c9-4c1d-aeea-2eeb88824376",
+   "id": "8e3426bf-a6f7-4479-9d54-b614a4bc296d",
    "metadata": {},
    "outputs": [],
    "source": []
