--- a/notebooks/simple-pilot.ipynb
+++ b/notebooks/simple-pilot.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 13,
    "id": "d3664c51-5d75-4d68-a74c-d773875048bd",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "id": "3e2c71c0-d11f-417e-b7fb-aeaee08d9acb",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "array([[0.30581131, 0.69418869]])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "id": "fd27d5f0-eeb9-4284-a6b1-16b3836ffa0b",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "array([[0.56024287, 0.43975713]])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "1d46146e-0701-4bfe-a793-05ff11dd19d9",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
        "array([[0.46630715, 0.53369285]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "42c7a26c-764e-4276-b0d6-93f1c7fe9cb6",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "array([[0.21454639, 0.78545361]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "id": "af28b481-5ca5-48d1-821b-e9e9c0fda9c1",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "array([[0.33445889, 0.66554111]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "id": "cc2b2879-9608-4c70-8915-4e08455aba32",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "array([[0.32783676, 0.67216324]])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "id": "68e55d5a-30b6-4a0e-91f5-17eab3cb68d6",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "array([[0.32783676, 0.67216324]])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "id": "b03cc234-7623-4fc1-8e3c-e8a87835cce2",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
        "array([[0.49018913, 0.50981087]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "f7af2f27-1618-4065-81bd-fc7bcd111e41",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "id": "bfa3fa05-4705-427f-9297-5b79f730b6b3",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 24,
    "id": "f1bc828a-ed12-45a8-8623-9927d087fcef",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 25,
    "id": "d9f8b250-dbaa-420b-83c3-9dbe6982fc5d",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
        "505"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 26,
    "id": "f86b6888-e3f0-40cb-b49c-24484fb54b6c",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "0.06633390253513727"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "id": "950f875b-7089-4e19-afc6-d820ad1b0a04",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 32,
    "id": "57faa157-57ca-4ca0-8b1d-3da0c862a284",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://t.co/eHKLp12yiP Paci?c Media Centre | articles: AUSTRALIA: RSF protests over new security gag over reporting on...\n"
+      "Christian Attacked by Muslims at the Temple Mount after Waving Israeli Flag via Pamela Geller - ... http://t.co/wGWiQmICL1\n"
      ]
     },
     {
@@ -719,25 +719,25 @@
     {
      "data": {
       "text/plain": [
-       "['new',\n",
-       " 'http',\n",
-       " 'media',\n",
-       " 'australia',\n",
-       " 'articles',\n",
-       " 'rsf',\n",
-       " 'security',\n",
-       " 'articles australia',\n",
-       " 'over new',\n",
-       " 'new security']"
+       "['http',\n",
+       " 'israeli',\n",
+       " 'temple',\n",
+       " 'muslims',\n",
+       " 'christian',\n",
+       " 'wgwiqmicl1',\n",
+       " 'mount',\n",
+       " 'attacked',\n",
+       " 'flag',\n",
+       " 'pamela']"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = nationality_tweets[359]\n",
+    "text = nationality_tweets[49]\n",
     "\n",
     "print(text)\n",
     "important_lime_words(\n",
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "id": "656798bb-85c0-442b-8910-f73d0c59ae6e",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        "array([[0.25125012, 0.74874988]])"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,23 +788,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 34,
    "id": "5d73277d-e19e-4055-97d1-a481f98ac778",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.57531384, 0.42468616]])"
+       "array([[0.14286394, 0.85713606]])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text2 = text.replace(\"Syrian\", \"German\")\n",
+    "text2 = text.replace(\"California\", \"Germany\")\n",
     "\n",
     "clf.predict_proba([text2])"
    ]
